--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -2,7 +2,8 @@
 /* Profile_page */
 body {
 	background: #dcdcdc;
-	margin-top: 20px;
+	margin-top: 15px;
+	margin-bottom: 30px;
 }
 
 .profile-cover {
