--- a/src/main/webapp/css/member_chart.css
+++ b/src/main/webapp/css/member_chart.css
@@ -1,60 +1,66 @@
-body{
-    margin-top:20px;
-    color: #1a202c;
-    text-align: left;
-    background-color: #dcdcdc;    
+/* Profile_page */
+body {
+	background: #dcdcdc;
+	margin-top: 20px;
 }
-.main-body {
+
+.panel {
+	margin-bottom: 30px;
+	color: #696969;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.panel-heading {
+	color: #393939;
+	padding: 10px 20px;
+	border-width: 0;
+	border-radius: 0;
+}
+
+.card{
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+
+}
+
+.wrap { /*父元素*/
+	width: 100%;
+	height: 200px;
+	display: flex;
+	/* justify-content: space-between; */
+	margin-top: 15px;
+}
+
+.left {
+	/* background: red; */
+	width: 11%;
+	height: 100%;
 	
-    padding: 15px;
 }
 
-.nav-link {
-    color: #4a5568;
-}
-/* .card { */
-/*     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06); */
-/* } */
-
-/* .card { */
+.right1 {
 	
-/*     position: relative; */
-/*     display: flex; */
-/*     flex-direction: column; */
-/*     min-width: 0; */
-/*     word-wrap: break-word; */
-/*     background-color: #fff; */
-/*     background-clip: border-box; */
-/*     border: 0 solid rgba(0,0,0,.125); */
-/*     border-radius: .25rem; */
-/* } */
-
-.card-body {
+	/* background: rgb(8, 8, 180); */
+	width: 44%;
+	height: 400px;
 	
-/*     flex: 1 1 auto; */
-/*     min-height: 1px; */
-/*     padding: 1rem; */
 }
 
-.gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
+.right2 {
+	
+	/* background: rgb(8, 180, 117); */
+	width: 44%;
+	height: 400px;
+	
 }
 
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
-}
-.mb-3, .my-3 {
-    margin-bottom: 1rem!important;
-}
+.right3 {
+	
+	/* background: rgb(180, 166, 8); */
+	width: 88%;
+	height: 500px;
+	margin-top: 10.5%;
+	margin-left: 11%;
 
-.bg-gray-300 {
-    background-color: #e2e8f0;
-}
-.h-100 {
-    height: 100%!important;
-}
-.shadow-none {
-    box-shadow: none!important;
 }
